fixer docummentation swagger pour tags
